--- a/docs/02-app/01-building-your-application/03-rendering/index.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/index.mdx
@@ -32,7 +32,7 @@ Historically, developers had to use different languages (e.g. JavaScript, PHP) a
 
 However, each environment has its own set of roles, capabilities, and constraints. Therefore, the code you write for the server and the client cannot be the same. There are certain operations (e.g. data fetching), that are better suited for one environment over the other.
 
-Understanding these differences is key to effectively using React and Next.js. We'll cover the differences and use cases in more detail on the [Server](/docs/app/building-your-application/rendering/server-environment) and [Client](/docs/app/building-your-application/rendering/server-environment) rendering pages, for now, let's continue building on our foundation.
+Understanding these differences is key to effectively using React and Next.js. We'll cover the differences and use cases in more detail on the [Server](/docs/app/building-your-application/rendering/server-components) and [Client](/docs/app/building-your-application/rendering/client-components) Components pages, for now, let's continue building on our foundation.
 
 ### Request-Response Lifecycle
 
